# Test-Harness

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.claude/: settings.local.json
configs/: models.yaml
configs/prompts/: default.yaml
data/: goldset.example.json
docs/: architecture-v2.md  plan.md  roadmap-v2.md
docs/ref/: fastcampus_ANALYSIS_SUMMARY.md  prompt-engineering-research-summary.md  the_prompt_test_ANALYSIS_SUMMARY.md  woowahan_article.md
docs/worklog/: 2026-01-21.md  2026-01-22.md
scripts/: import_ner_data.py
services/api/: pyproject.toml
services/api/src/test_harness_api/: __init__.py  dependencies.py  main.py
services/api/src/test_harness_api/routers/: __init__.py  datasets.py  evaluations.py  prompts.py  tests.py  websocket.py
services/api/src/test_harness_api/services/: dataset_service.py  prompt_service.py  test_executor.py  test_service.py
services/web/: next.config.js  package-lock.json  package.json
services/web/src/app/: globals.css  layout.tsx  page.tsx
services/web/src/app/compare/: page.tsx
services/web/src/app/datasets/: page.tsx
services/web/src/app/prompts/: page.tsx
services/web/src/app/tests/: page.tsx
services/web/src/components/ui/: Badge.tsx  Button.tsx  Input.tsx  Modal.tsx  index.ts
services/web/src/types/: index.ts
shared/: __init__.py  pyproject.toml
shared/adapters/: __init__.py  base.py  openai_compat.py  together_ai.py
shared/core/: __init__.py  mapping.py  models.py  promptfoo_runner.py
shared/database/: database.py
(+6 files in other folders)
