[project]
name = "test-harness"
version = "0.1.0"
description = "LLM 프롬프트 최적화 및 워크플로우 검증을 위한 통합 테스트베드"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
