[project]
name = "test-harness-shared"
version = "0.1.0"
description = "Test Harness Shared Components"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.26.0",
    "aiosqlite>=0.19.0",
    "pyyaml>=6.0",
    "tiktoken>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "adapters", "database"]
